<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">WeBus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="busline">BUSLINE</string>
    <string name="line">LINE</string>
    <string name="linename">Line:</string>
    <string name="mapsearch">map</string>
    <string name="iccard">Card</string>
    <string name="user">USER</string>
    <string name="other">Other</string>
    <string name="end">End:</string>
    <string name="start">Start:</string>
    <string name="city">City:</string>
    
    <string name="login_label_username">Account</string>  
    <string name="login_label_password">Password</string>  
    <string name="login_label_signin">Login</string>  
    <string name="login_status_logging_in">Login...</string>  
    <string name="login_username_hint">Email or phone</string>  
    <string name="login_register_link">No Account? <a href="#" mce_href="#">sign up</a></string>   
    
    <string name="register_username">NickName</string>
    <string name="register_label_username">Name</string>
    <string name="register_rlabel_password">Repeat PassWord</string>
    <string name="register_label_signin">Sign up</string>
    
    <string name="change">Change</string>
    <string name="account_set">Account Set</string>
    <string name="ic_card">IC Card</string>
    <string name="iccard_hint">Input IC Number</string>
    <string name="bind_button_text">Binding</string>
    <string name="yue_label">Remain</string>
    <string name="yue_edit_label">0.00￥</string>
    <string name="record_label">Consume Record</string>
    <string name="chongzhi_label">Recharge Record</string>
    <string name="FeedBack">FeedBack</string>

    <string name="drivesearch">Drive</string>
    <string name="bussearch">Bus</string>
    <string name="walksearch">Walk</string>
    
    <string name="input_busline_hint">Input Busline number</string>
    <string name="info">Notice</string>
    <string name="notice">NOTICE</string>
    <string name="comment">COMMENT</string>
    
    <string name="route_search">ROUTE SEARCH</string>
    <string name="Bus_cowd_search">BUS CROWD SEARCH</string>
    <string name="notice_com_search">NOTICE COMMENT</string>
    <string name="user_info">USER INFOMATION</string>
    
    <string name="Warning">WARN</string>
    <string name="crowdrate">Crowd Rate</string>
    <string name="buscrowrate">Delay Rate</string>
    <string name="station">Station</string>
    <string name="buscrowd">Bus Crowd</string>
</resources>